--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-107b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-107b.htm
@@ -1,83 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Enabling the CVS resource decorations</title>
-<meta name="keyword" content="team">
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head"> Enabling the CVS resource decorations</H1>
-<P CLASS="Para">When enabled, CVS will decorate resources in workbench views with 
-  icon and label decorations that indicate the CVS state of the resource.</P>
-<P CLASS="Para"> To enable the CVS decorations: </P>
-<ol>
-  <li> 
-    <p CLASS="Para"> From the main menu bar, select <b>Window &gt; Preferences</b> 
-      to open the workbench Preferences dialog.
-  </li>
-  <li>In the dialog, select the<b> Workbench &gt; Label Decorations</b> preference 
-    page. This page allows the enablement/disablement of all decorations defined 
-    by different plugins in the workbench.</li>
-  <li>Click on the CVS box to enable the CVS decorations.</li>
-  <li> Click <b>OK</b>.</li>
-</ol>
-<p><b>Note</b>: The decorations may not appear immediately because, in some cases, 
-  they are expensive to compute so they are calculated in the background.</p>
-<p>To configure the CVS decorations:</p>
-<p class="Para"></p>
-<ol>
-  <li> 
-    <p class="Para"> From the main menu bar, select <b>Window &gt; Preferences</b> 
-      to open the workbench Preferences dialog. 
-  </li>
-  <li>In the dialog, select the<b> Team &gt; CVS &gt; Label Decorations</b> preference 
-    page. This page allows the configuration of how decorations appear on CVS 
-    projects, folders and files.</li>
-  <li>To configure the text label decorations: 
-    <ol>
-      <li>Pick the resource type (file, folder, project) for which you want to 
-        change the decoration.</li>
-      <li>Click in the decoration string for that resource type at the location 
-        where the new decoration element should go.</li>
-      <li>Click the <b>Add Variable</b> button for that resource type.</li>
-      <li>Choose the CVS information variable to add. For instance, for files, 
-        you could select the <i>added_flag</i> which will be inserted in the decoration 
-        where you placed the cursor. The string <i>{added_flag}</i> will be added 
-        to the decoration string which will decorate newly added resources using 
-        the added resource label (which can be set in the <i>Label Decoration 
-        for Added</i> field).</li>
-    </ol>
-  </li>
-  <li>Repeat the above for any other decorations to be added.</li>
-  <li>Decorations can be removed by deleting the decoration variable name (i.e.<i> 
-    {added_flag}</i>) from the decoration string. In a similar manner, spacing 
-    can be added.</li>
-  <li>To configure icon decorations, simply enbable/disable the icon checkboxes 
-    at the bottom of the page.</li>
-  <li>Click <b>OK</b> or <b>Apply</b> for the new decorations to take effect.</li>
-</ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-  <a href="../concepts/concepts-26.htm">Team programming with CVS</a>
-  <br>
-<a href="../concepts/concepts-30.htm">
-Synchronizing with a CVS repository</a>
-</p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-<a href="tasks-92.htm"><br>
-  </a><a href="tasks-96.htm"> Checking out a project from a CVS repository</a>
-  <br><a href="tasks-117.htm">Sharing a new project using CVS</a></p>
-
-
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
-  </a><a href="../reference/ref-51a.htm"> CVS</a> </p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Enabling the CVS resource decorations</title><meta name="keyword" content="team"></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Enabling the CVS resource decorations</H1><P>When enabled, CVS will decorate resources in workbench views with icon and label decorations that indicate the CVS state of the resource.</P><P>To enable the CVS decorations:</P><ol>  <li>From the main menu bar, select <b>Window &gt; Preferences</b> to open the     workbench Preferences dialog.</li>  <li>In the dialog, select the<b> Workbench &gt; Label Decorations</b> preference     page. This page allows the enabling and disabling of all decorations defined     by different plugins in the workbench.</li>  <li>Click on the CVS box to enable the CVS decorations.</li>  <li> Click <b>OK</b>.</li></ol><p><em>Note:</em> The decorations may not appear immediately because, in some cases, they are expensive to compute so they are calculated in the background.</p><p>To configure the CVS decorations:</p><ol>  <li>From the main menu bar, select <b>Window &gt; Preferences</b> to open the     workbench Preferences dialog.</li>  <li>In the dialog, select the<b> Team &gt; CVS &gt; Label Decorations</b> preference     page. This page allows the configuration of how decorations appear on CVS     projects, folders and files.</li>  <li>To configure the text label decorations:     <ol type="a">      <li>Pick the resource type (file, folder, project) for which you want to         change the decoration.</li>      <li>Click in the decoration string for that resource type at the location         where the new decoration element should go.</li>      <li>Click the <b>Add Variables</b> button for that resource type.</li>      <li>Choose the CVS information variable to add. For instance, for files,         you could select the <i>added_flag</i> which will be inserted in the decoration         where you placed the cursor. The string <i>{added_flag}</i> will be added         to the decoration string which will decorate newly added resources using         the added resource label (which can be set in the <i>Label Decoration         for Added</i> field).</li>	</ol></li>  <li>Repeat the above for any other decorations to be added.</li>  <li>Decorations can be removed by deleting the decoration variable name (i.e.<i>     {added_flag}</i>) from the decoration string. In a similar manner, spacing     can be added.</li>  <li>To configure icon decorations, simply enbable/disable the icon checkboxes     at the bottom of the page.</li>  <li>Click <b>OK</b> or <b>Apply</b> for the new decorations to take effect.</li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a><br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-96.htm">Checking out a project from a CVS repository</a><br><a href="tasks-117.htm">Sharing a new project using CVS</a></p><p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br><a href="../reference/ref-47.htm">CVS</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
