--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-111.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-111.htm
@@ -1,61 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Defining a branch tag</title>
-<meta name="keyword" content="team">
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head"> Defining a branch tag</H1>
-<P CLASS="Intro"> <b>Prerequisite</b>: Before you define a branch tag, you must 
-  have a valid repository location in the CVS Repositories view. 
-<P CLASS="Intro"> To define a branch tag: 
-<ol>
-  <li> 
-    <p CLASS="Intro">Switch to the CVS Repository Exploring perspective or add 
-      the CVS Repositories view to the current perspective. 
-  </li>
-  <li>Select the repository location that is to contain the branch.</li>
-  <li> 
-    <p CLASS="Intro">From the pop-up menu for the CVS Repositories view, select 
-      <b>Define Branch Tag</b>.
-  </li>
-  <li> 
-    <p CLASS="Intro"> In the dialog that appears, type the name of the branch 
-      tag.
-  </li>
-  <li> 
-    <p CLASS="Intro"> In the <b> Name</b> field, type the name for the new stream.
-  </li>
-  <li> Click <b>OK</b> to add the branch tag to the list of branches for the repository 
-    location.</li>
-</ol>
-<p><b>Note</b>: Defining a branch tag will not add the tag to the repository. 
-  If the tag already exists in the repository, defining the tag in the CVS Repositories 
-  view will allow the contents of the branch to be browsed. If the tag does not 
-  exist, then the contents of the branch will be empty.</p>
-  
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-<br><a href="../concepts/concepts-26.htm">Team programming with CVS</a>
-<br><a href="../concepts/concepts-27c.htm">CVS Repositories</a>
-<br><a href="../concepts/concepts-27b.htm">Branches</a>
-<br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
-</p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-<br><a href="tasks-92.htm">Creating a CVS repository location</a>
-<br><a href="tasks-96.htm">Checking out a project from a CVS repository</a>
-<br><a href="tasks-110.htm">Discovering branch and version tags</a>
-<br><a href="tasks-117.htm">Sharing a new project using CVS</a>
-</p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Defining a branch tag</title><meta name="keyword" content="team"></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Defining a branch tag</H1><p><em>Prerequisite:</em> Before you define a branch tag, you must have a valid repository location in the CVS Repositories view.</p> <p>To define a branch tag:</p><ol>  <li>Switch to the CVS Repository Exploring perspective or add the CVS Repositories     view to the current perspective.</li>  <li>Select the repository location that is to contain the branch.</li>  <li>From the pop-up menu for the CVS Repositories view, select <b>Define Branch Tag</b>.</li>  <li>In the dialog that appears, type the name of the branch tag.</li>  <li>In the <b> Name</b> field, type the name for the new stream.</li>  <li>Click <b>OK</b> to add the branch tag to the list of branches for the repository location.</li></ol><p><em>Note:</em> Defining a branch tag will not add the tag to the repository. If the tag already exists in the repository, defining the tag in the CVS Repositories view will allow the contents of the branch to be browsed. If the tag does not exist, then the contents of the branch will be empty.</p>  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a><br><a href="../concepts/concepts-27c.htm">CVS Repositories</a><br><a href="../concepts/concepts-27b.htm">Branches</a><br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-92.htm">Creating a CVS repository location</a><br><a href="tasks-96.htm">Checking out a project from a CVS repository</a><br><a href="tasks-110.htm">Discovering branch and version tags</a><br><a href="tasks-117.htm">Sharing a new project using CVS</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
