--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-119.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-119.htm
@@ -1,51 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Viewing a File's Revision History</title>
-<meta name="keyword" content="team">
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head"> Viewing a File's Revision History</H1>
-<P CLASS="Para">Every time you commit a file to the CVS repository, a new revision 
-  is created. Each revision is identified by a number (for example, 1.1 or 1.11.3.5). 
-  Along with each revision is stored the author, the date, and a commit comment.</P>
-<P CLASS="Para">To view the resource history for a file:</P>
-<ol>
-  <li>Select the file in the Navigator view. From the context menu, choose <b>Team 
-    &gt; Show in Resource History</b>.</li>
-  <li>The CVS Resource History view will open and show a history for the selected 
-    file.</li>
-</ol>
-<p><b>Note:</b> The CVS Resource History view also shows you all version and branch 
-  tags that are associated with the file.</p>
-<p><b>Tip:</b> You can drag and drop a file from the Navigator view into the CVS 
-  Resource History view instead of choosing the menu item.</p>
-<p><b>Tip:</b> By clicking on column headings in the CVS Resource History view 
-  you can change the sorting order of the items.</p>
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
-<a href="../concepts/concepts-27b.htm">Branches</a><br>
-<a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
-</p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-115.htm">Synchronizing with the repository</a>
-</p>
-
-
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
-</a><a href="../reference/ref-51a.htm">
-Streams in CVS</a>
-</p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Viewing a File's Revision History</title><meta name="keyword" content="team"></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head"> Viewing a File's Revision History</H1><P CLASS="Para">Every time you commit a file to the CVS repository, a new revision   is created. Each revision is identified by a number (for example, 1.1 or 1.11.3.5).   Along with each revision is stored the author, the date, and a commit comment.</P><P CLASS="Para">To view the resource history for a file:</P><ol>  <li>Select the file in the Navigator view. From the context menu, choose <b>Team     &gt; Show in Resource History</b>.</li>  <li>The CVS Resource History view will open and show a history for the selected     file.</li></ol><p><b>Note:</b> The CVS Resource History view also shows you all version and branch   tags that are associated with the file.</p><p><b>Tip:</b> You can drag and drop a file from the Navigator view into the CVS   Resource History view instead of choosing the menu item.</p><p><b>Tip:</b> By clicking on column headings in the CVS Resource History view   you can change the sorting order of the items.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a><br><a href="../concepts/concepts-27b.htm">Branches</a><br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-115.htm">Synchronizing with the repository</a></p><p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br></a><a href="../reference/ref-47.htm">CVS</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
