--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100a.htm
@@ -1,55 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Branching</title>
-<meta name="keyword" content="team">
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head"> Branching</H1>
-<P CLASS="Para">Creating a branch and releasing resources to that branch is useful 
-  in cases where you are not yet ready to put your changes in the main development flow. 
-  It is also useful for creating incremental patches to existing versions.</P>
-<P CLASS="Para">To create a branch:</P>
-<ol>
-  <li> 
-    <p CLASS="Para"> From the context menu of the project, select <b>Team &gt; 
-      Branch....</b>
-  </li>
-  <li>Enter the Branch Name for the new branch in the text area.</li>
-  <li>If the project in your workspace is not already a version, enter the Version 
-    Name to create in the text area.</li>
-  <li>If you would like to start working in the branch immediately, make sure 
-    the checkbox is selected.</li>
-  <li>Click <b>OK</b>.</li>
-</ol>
-<p><b>Note</b>: The Version Name is important; you will need this when you want 
-  to merge your changes later on. It identifies the point at which the branch 
-  was created.</p>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
-<a href="../concepts/concepts-27b.htm">Branches</a><br>
-<a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
-</p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-111.htm">Defining a branch tag</a><br>
-<a href="tasks-115.htm">Synchronizing with the repository</a><br>
-<a href="tasks-100b.htm">Merging from a branch</a>
-</p>
-
-
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
-</a><a href="../reference/ref-51a.htm">
-Streams in CVS</a>
-</p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Branching</title><meta name="keyword" content="team"></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head"> Branching</H1><P CLASS="Para">Creating a branch and releasing resources to that branch is useful   in cases where you are not yet ready to put your changes in the main development flow.   It is also useful for creating incremental patches to existing versions.</P><P CLASS="Para">To create a branch:</P><ol>  <li>     <p CLASS="Para"> From the context menu of the project, select <b>Team &gt;       Branch....</b>  </li>  <li>Enter the Branch Name for the new branch in the text area.</li>  <li>If the project in your workspace is not already a version, enter the Version     Name to create in the text area.</li>  <li>If you would like to start working in the branch immediately, make sure     the checkbox is selected.</li>  <li>Click <b>OK</b>.</li></ol><p><b>Note</b>: The Version Name is important; you will need this when you want   to merge your changes later on. It identifies the point at which the branch   was created.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a><br><a href="../concepts/concepts-27b.htm">Branches</a><br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-111.htm">Defining a branch tag</a><br><a href="tasks-115.htm">Synchronizing with the repository</a><br><a href="tasks-100b.htm">Merging from a branch</a></p><p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br></a><a href="../reference/ref-47.htm">CVS</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
