--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-96.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-96.htm
@@ -1,85 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Checking out a project from a CVS repository</title>
-<meta name="keyword" content="team">
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1> Checking out a project from a CVS repository</H1>
-<P>To check out a project from a CVS repository to the workbench:</P>
-<ol>
-  <li> 
-    <p class="Intro">Switch to the CVS Repository Exploring perspective or add 
-      the CVS Repositories view to the current perspective. 
-  </li>
-  <li> 
-    <p>In the CVS Repositories view, expand the repository location. 
-  </li>
-  <li>Expand <b>HEAD</b> and select the folders that you want to add as projects 
-    to the workbench. If you are looking for a folder in a particular version: 
-    <ol>
-      <li type="a">Expand the <b> Versions</b> category and find the folder name 
-        that you want to add to the workbench.&nbsp;&nbsp;</li>
-      <li>Expand the folder to reveal its versions.</li>
-    </ol>
-    <P>If you are looking for the latest folder in a branch: </P>
-    <ol type="a">
-      <li>Expand the <b> Branches</b> category.</li>
-      <li>Expand the banch that holds the folder that you want to add to the workbench.</li>
-    </ol>
-    <p><b>Note</b>: If you do not see the folders you are expecting, ensure that 
-      the CVS Repositories view is in show folders mode by selecting <b>Show Folders</b> 
-      from the drop down menu in the title bar of the view.</p>
-  <li>From the pop-up menu for the selected folders, select one of the following</li>
-
-
-  <ol>
-    <li type="a"><b> Checkout as Project</b> to check out each of the selected 
-      folders as a project in the local workspace with the same name as the folder 
-      in the respository.</li>
-    <li><b>Checkout As...</b> to check out the selected folder into a custom configured 
-      project in the local workspace. <b>Note</b>: This option is only enable 
-      for single folders.</li>
-  </ol>
-  <li>If <b>Checkout As...</b> was chosen, one of two possible dialogs is displayed 
-    depending on whether the folder in the repository contains a .project file. 
-    <ol type="a">
-      <li>If there is a .project file, the dialog will accept a custom project 
-        name and location.</li>
-      <li>Otherwise, the dialog will be the New Project wizard which allows full 
-        customization of the project (e.g. Java project).</li>
-    </ol>
-  </li>
-</ol>
-<p><b>Tip</b>: Any folder, including non-root folders, can be checked out from 
-  a CVS repository. </p>
-  
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-<br><a href="../concepts/concepts-26.htm">Team programming with CVS</a>
-<br><a href="../concepts/concepts-27c.htm">CVS Repositories</a>
-</p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-<br><a href="tasks-96a.htm">Checking out a module from a CVS repository</a>
-<br><a href="tasks-92.htm">Creating a CVS repository location</a>
-<br><a href="tasks-103.htm">Replacing resources in the workbench</a>
-<br><a href="tasks-110.htm">Discovering branch and version tags</a>
-<br><a href="tasks-117.htm">Sharing a new project using CVS</a>
-<br><a href="tasks-115.htm">Synchronizing with the repository</a>
-</p>
-
-<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
-<br><a href="../reference/ref-47.htm">CVS</a>
-<br><a href="../reference/ref-32.htm">CVS Repositories view</a>
-</p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Checking out a project from a CVS repository</title><meta name="keyword" content="team"></HEAD><BODY BGCOLOR="#ffffff"><H1>Checking out a project from a CVS repository</H1><P>To check out a project from a CVS repository to the workbench:</P><ol>  <li>Switch to the CVS Repository Exploring perspective or add the CVS Repositories     view to the current perspective.</li>  <li>In the CVS Repositories view, expand the repository location.</li>  <li>Expand <b>HEAD</b> and select the folders that you want to add as projects     to the workbench. If you are looking for a folder in a particular version:     <ol type="a">      <li>Expand the <b> Versions</b> category and find the folder name         that you want to add to the workbench.</li>      <li>Expand the folder to reveal its versions.</li>    </ol>	<p>If you are looking for the latest folder in a branch:</p>    <ol type="a">      <li>Expand the <b> Branches</b> category.</li>      <li>Expand the banch that holds the folder that you want to add to the workbench.</li>    </ol>    <p><em>Note:</em> If you do not see the folders you are expecting, ensure that       the CVS Repositories view is in show folders mode by selecting <b>Show Folders</b>       from the drop down menu in the title bar of the view.</p></li>  <li>From the pop-up menu for the selected folders, select one of the following:    <ol type="a">      <li><b>Checkout as Project</b> to check out each of the selected         folders as a project in the local workspace with the same name as the folder         in the respository.</li>      <li><b>Checkout As...</b> to check out the selected folder into a custom configured         project in the local workspace. <em>Note:</em> This option is only enabled        for single folders.</li>    </ol></li>  <li>If <b>Checkout As...</b> was chosen, one of two possible dialogs is displayed     depending on whether the folder in the repository contains a .project file.     <ol type="a">      <li>If there is a .project file, the dialog will accept a custom project         name and location.</li>      <li>Otherwise, the dialog will be the New Project wizard which allows full         customization of the project (e.g. Java project).</li>    </ol>  </li></ol><p><em>Tip:</em> Any folder, including non-root folders, can be checked out from a CVS repository.</p>  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a><br><a href="../concepts/concepts-27c.htm">CVS Repositories</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-96a.htm">Checking out a module from a CVS repository</a><br><a href="tasks-92.htm">Creating a CVS repository location</a><br><a href="tasks-103.htm">Replacing resources in the workbench</a><br><a href="tasks-110.htm">Discovering branch and version tags</a><br><a href="tasks-117.htm">Sharing a new project using CVS</a><br><a href="tasks-115.htm">Synchronizing with the repository</a></p><p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27"><br><a href="../reference/ref-47.htm">CVS</a><br><a href="../reference/ref-32.htm">CVS Repositories view</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
