--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-96a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-96a.htm
@@ -1,54 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Checking out a module from a CVS repository</title>
-<meta name="keyword" content="team">
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1> Checking out a module from a CVS repository</H1>
-<P>Modules can be defined in the CVS repository. To check out a module from a 
-  CVS repository to the workbench:</P>
-<ol>
-  <li> 
-    <p class="Intro">Switch to the CVS Repository Exploring perspective or add 
-      the CVS Repositories view to the current perspective.
-  </li>
-  <li>Switch the CVS Respositories View to modules mode by selecting <b>Show Modules</b> 
-    in the drop down menu found in the title bar of the view.</li>
-  <li> 
-    <p>In the CVS Repositories view, expand the repository location.
-  </li>
-  <li>Expand <b>HEAD</b> and select the modules that you want to add to the workbench.
-  <li>From the pop-up menu select <b>Checkout as Module</b>. This will checkout 
-    the module into one or more projects in the local workspace, depending on 
-    how the module is defined in the repository.</li>
-</ol>
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-<br><a href="../concepts/concepts-26.htm">Team programming with CVS</a>
-<br><a href="../concepts/concepts-27c.htm">CVS Repositories</a>
-</p>
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-<br><a href="tasks-96.htm">Checking out a project from a CVS repository</a>
-<br><a href="tasks-92.htm">Creating a CVS repository location</a>
-<br><a href="tasks-103.htm">Replacing resources in the workbench</a>
-<br><a href="tasks-110.htm">Discovering branch and version tags</a>
-<br><a href="tasks-117.htm">Sharing a new project using CVS</a>
-<br><a href="tasks-115.htm">Synchronizing with the repository</a>
-</p>
-
-<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
-<br><a href="../reference/ref-47.htm">CVS</a>
-<br><a href="../reference/ref-32.htm">CVS Repositories view</a>
-</p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Checking out a module from a CVS repository</title><meta name="keyword" content="team"></HEAD><BODY BGCOLOR="#ffffff"><H1>Checking out a module from a CVS repository</H1><P>Modules can be defined in the CVS repository. To check out a module from a CVS repository to the workbench:</P><ol>  <li>Switch to the CVS Repository Exploring perspective or add the CVS Repositories     view to the current perspective.</li>  <li>Switch the CVS Respositories View to modules mode by selecting <b>Show Modules</b>     in the drop down menu found in the title bar of the view.</li>  <li>In the CVS Repositories view, expand the repository location.</li>  <li>Expand <b>HEAD</b> and select the modules that you want to add to the workbench.</li>  <li>From the pop-up menu select <b>Checkout Module</b>. This will checkout     the module into one or more projects in the local workspace, depending on     how the module is defined in the repository.</li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a><br><a href="../concepts/concepts-27c.htm">CVS Repositories</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-96.htm">Checking out a project from a CVS repository</a><br><a href="tasks-92.htm">Creating a CVS repository location</a><br><a href="tasks-103.htm">Replacing resources in the workbench</a><br><a href="tasks-110.htm">Discovering branch and version tags</a><br><a href="tasks-117.htm">Sharing a new project using CVS</a><br><a href="tasks-115.htm">Synchronizing with the repository</a></p><p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27"><br><a href="../reference/ref-47.htm">CVS</a><br><a href="../reference/ref-32.htm">CVS Repositories view</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
