--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-10.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-10.htm
@@ -1,69 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Disconnecting a project from CVS</title>
-<meta name="keyword" content="team">
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head"> Disconnecting a project from CVS</H1>
-<P CLASS="Para">Disconnecting a project from CVS to disable the CVS operations 
-  that can be peformed on the project and it resources and optionally to remove 
-  the CVS information (stroed in the CVS folders) associated with the project.</P>
-<P CLASS="Para"> To disconnect a project from CVS: </P>
-<ol>
-  <li> 
-    <p CLASS="Para"> In the Navigator view, select the project to be disconnected. 
-  </li>
-  <li> 
-    <p CLASS="Para">Select <b>Team &gt;</b> <b>Disconnect...</b> from the project's 
-      pop-up menu. The Confirm Disconnect from CVS dialog opens. 
-  </li>
-  <li>In the dialog, choose one of: 
-    <ol type="a">
-      <li>Delete the CVS meta information - disables the CVS team menu operations 
-        and removes the CVS folders and thier contents from the file system. </li>
-      <li>Do not delete the CVS meta information - disables the CVS team menu 
-        operations but leaves the CVS meta information.</li>
-    </ol>
-  </li>
-  <li> 
-    <p CLASS="Para">Click <b>OK</b> to disconnect the project.
-  </li>
-</ol>
-
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27b.htm"><br>
-Streams</a><a href="../reference/ref-51a.htm"><br>
-</a><a href="../concepts/concepts-30.htm">
-Team synchronization</a>&nbsp;</p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-</a><a href="tasks-96.htm">
-Adding resources from a repository to the workbench</a>&nbsp;<a href="tasks-103.htm"><br>
-Replacing resources with a repository
-        version</a><a href="tasks-111.htm"><br>
-Creating a new stream</a><a href="tasks-100a.htm"><br>
-Splitting from a stream</a><a href="tasks-115.htm"><br>
-Synchronizing with a stream</a><a href="tasks-113.htm"><br>
-Catching up</a><a href="tasks-113b.htm"><br>
-Resolving conflicts and merging changes</a><a href="tasks-100b.htm"><br>
-Merging from a stream</a>
-</p>
-
-
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
-</a><a href="../reference/ref-51a.htm">
-Streams in CVS</a>
-</p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Disconnecting a project from CVS</title><meta name="keyword" content="team"></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Disconnecting a project from CVS</H1><P>Disconnecting a project from CVS to disable the CVS operations that can be peformed on the project and it resources and optionally to remove the CVS information (stored in the CVS folders) associated with the project.</P><P>To disconnect a project from CVS:</P><ol>  <li>In the Navigator view, select the project to be disconnected.</li>  <li>Select <b>Team &gt; Disconnect</b> from the project's pop-up menu. The Confirm     Disconnect from CVS dialog opens.</li>  <li>In the dialog, choose one of:     <ol type="a">      <li><b>Delete the CVS meta information</b> - disables the CVS team menu operations         and removes the CVS folders and thier contents from the file system.</li>      <li><b>Do not delete the CVS meta information</b> - disables the CVS team menu         operations but leaves the CVS meta information.</li>    </ol></li>  <li>Click <b>Yes</b> to disconnect the project.</li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a><br><a href="../concepts/concepts-27b.htm">Branches</a><br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-96.htm">Checking out a project from the CVS repository</a><br><a href="tasks-103.htm">Replacing resources in the workbench</a><br><a href="tasks-111.htm">Defining a branch tag</a><br><a href="tasks-100a.htm">Branching</a><br><a href="tasks-115.htm">Synchronizing with the repository</a><br><a href="tasks-113.htm">Updating</a><br><a href="tasks-113b.htm">Resolving conflicts</a><br><a href="tasks-100b.htm">Merging from a branch</a></p><p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br><a href="../reference/ref-47.htm">CVS</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
