*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_accessibility.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_accessibility.htm
@@ -32,7 +32,7 @@ the accessibility of existing operating systems and applications.&nbsp; While it
 is beyond the scope of this programmer's guide to cover the broad scope of
 assistive technologies, it is important for you to know that they exist.&nbsp;
 Why?&nbsp; Because simple things you can do when programming your software or
-documentation, such as providing alternate text for images in your HTML, or
+documentation, such as providing alternate text descriptions for images in your HTML, or
 keyboard equivalents for all of your software actions, can greatly improve the
 effectiveness of assistive technologies that make use of these techniques.</p>
 <h3>Accessibility resources</h3>
