--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_encoding.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_encoding.htm
@@ -16,7 +16,7 @@ Text file encoding
 preference in the workbench.&nbsp; </p>
 
 
-<p><img border="0" src="images/textencoding.jpg" width="409" height="155"></p>
+<p><img alt="" border="0" src="images/textencoding.jpg" width="409" height="155"></p>
 
 
 <p>Text files are encoded differently depending on the platform and the
