--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_accelConfig.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_accelConfig.htm
@@ -21,7 +21,7 @@ Only one accelerator configuration is active at any given time.&nbsp; End users
 control which one is active using the workbench <b>Preferences</b> dialog.</p>
 
 
-<p><img border="0" src="images/keybindings.jpg" width="606" height="532"></p>
+<p><img alt="" border="0" src="images/keybindings.jpg" width="606" height="532"></p>
 
 
 <p>From an implementation point of view, accelerator configurations are simply
