--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_markerhelp.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_markerhelp.htm
@@ -48,7 +48,7 @@ contexts are defined in the plug-in's <b>HelpContexts.xml </b>file:</p>
 </font>
 <p>Sure enough, when we select a readme marker with id=&quot;1234&quot; and
 select help using F1, we see our help description. </p>
-<p><img border="0" src="images/readmemarkerhelp.jpg" width="429" height="91"></p>
+<p><img border="0" src="images/readmemarkerhelp.jpg" width="429" height="91" alt="Tasks list with marker help"></p>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
