--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_markers.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_markers.htm
@@ -49,7 +49,7 @@ menu.&nbsp; (The popup menu actions are added dynamically in <b>ReadmeTextEditor
 the markers appear on the left side of the editor and in the tasks view.</font></p>
 
 
-<p><img border="0" src="images/readmemarkermenu.jpg" width="625" height="482"></p>
+<p><img border="0" src="images/readmemarkermenu.jpg" width="625" height="482" alt="Readme editor with readme markers on left side ruler"></p>
 
 
 <p>&nbsp;</p>
