--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_singleclick.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_singleclick.htm
@@ -16,7 +16,7 @@ Honoring single click support
 open their objects on single or double click. </p>
 
 
-<p><img border="0" src="images/singleclick.jpg" width="434" height="142"></p>
+<p><img border="0" src="images/singleclick.jpg" width="434" height="142" alt="Workbench &quot;Open mode&quot; preferences with disclaimer that the preference may not take effect in all views"></p>
 
 
 <p>Why the disclaimer about this preference not working for all views?&nbsp;
