--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_retarget_contribute_actionsets.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_retarget_contribute_actionsets.htm
@@ -54,7 +54,7 @@ true, then a <b><a href="../reference/api/org/eclipse/ui/actions/LabelRetargetAc
 <p>The retargeted actions will be visible in the window menu when the readme
 action set is visible.&nbsp; However, they will not be enabled if the readme
 tool's editor or outline view are not active.</p>
-<p><img border="0" src="images/readmeactionsetmenu.jpg" width="569" height="75"></p>
+<p><img border="0" src="images/readmeactionsetmenu.jpg" width="569" height="75" alt="Readme File Editor menu with two grayed items and one enabled item"></p>
 <p>&nbsp;</p>
 <p>What does the editor and view have to do?&nbsp; Again, the client side is
 similar to registering a handler for the workbench or an editor's retargetable
@@ -88,7 +88,7 @@ editor for the <b>ReadmeEditorActionBarContributor </b>changes.</p>
 }</font></pre>
 <p>That's it for the editor.&nbsp; We should see these actions enable when the
 editor is activated.</p>
-<p><img border="0" src="images/actionseteditorretargets.jpg" width="501" height="85">&nbsp;</p>
+<p><img border="0" src="images/actionseteditorretargets.jpg" width="501" height="85" alt="Readme File Editor menu with actions enabled">&nbsp;</p>
 <p>Note that the label for the first retargetable action (&quot;Editor Action
 4&quot;) was not used since the action set XML markup did not set <b>allowLabelUpdate</b>.</p>
 <p>The <b>ReadmeContentOutlinePage</b>
@@ -107,7 +107,7 @@ retargetable actions:</p>
 		action);  
 }</font></pre>
 <p>We should see its relabeled action when the content outliner is active.</p>
-<p><img border="0" src="images/actionsetoutlineretargets.jpg" width="502" height="92"></p>
+<p><img border="0" src="images/actionsetoutlineretargets.jpg" width="502" height="92" alt="Readme File Editor menu with renamed action"></p>
 <h4>&nbsp;</h4>
 
 
