--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_retarget_contribute_editors.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_retarget_contribute_editors.htm
@@ -99,7 +99,7 @@ instance.</p>
 <p>That completes the setup on the editor side.&nbsp; When the editor is open
 and active, the handlers (and their labels) as defined by the <b>ReadmeEditorActionBarContributor
 </b>will appear in the workbench menu bar.</p>
-<p><img border="0" src="images/editorretargets.jpg" width="139" height="92"></p>
+<p><img border="0" src="images/editorretargets.jpg" width="139" height="92" alt="Readme menu with three editor actions in workbench menu bar"></p>
 <p>Now that the editor's contributions are in place, what does a view do to register a handler?&nbsp; The code on the client side
 is similar to registering a handler for a workbench action, except that the
 action id is the one defined by the plug-in's editor.&nbsp; The <b>ReadmeContentOutlinePage</b>
@@ -120,7 +120,7 @@ registers a handler for these actions.</p>
 <p>Note that the outliner sets tool tip text and a label on the second action,
 since it allows relabeling.&nbsp; When the readme outliner view is made active,
 its handlers (and their labels) will now appear in the workbench menu bar.</p>
-<p><img border="0" src="images/editoroutlineretargets.jpg" width="145" height="93"></p>
+<p><img border="0" src="images/editoroutlineretargets.jpg" width="145" height="93" alt="Readme menu with one renamed editor action"></p>
 <p>Note that the relabeled action shows the new label.</p>
 
 
