--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_workingsets.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_workingsets.htm
@@ -25,7 +25,7 @@ techniques.</p>
     specified resources.&nbsp; Working sets are selected and defined using the
     view's filter selection dialog.</li>
 </ul>
-<p><img border="0" src="images/workingset.jpg" width="438" height="474"></p>
+<p><img alt="" border="0" src="images/workingset.jpg" width="438" height="474"></p>
 <p>If your plug-in implements a view that shows resources (or objects that are
 adaptable to <a href="../reference/api/org/eclipse/core/resources/IResource.html"><b>IResource</b></a>),
 you should support working sets.&nbsp; <b><a href="../reference/api/org/eclipse/ui/IWorkingSetManager.html">IWorkingSetManager</a>
@@ -58,7 +58,7 @@ The Java tooling uses this feature to define a Java working set type.&nbsp;
 Working set types are shown when the user decides to add a working set.</p>
 
 
-<p><img border="0" src="images/workingSetTypes.jpg" width="438" height="431"></p>
+<p><img border="0" src="images/workingSetTypes.jpg" width="438" height="431" alt="Working set dialog showing list of available types"></p>
 
 
 <p>See the
